# action_server/src/sema4ai/action_server/_server.py
@@ -408,12 +408,7 @@ def start_server(
             session.response = response
         return response
 
-    index_routes = [
-        "/",
-        "/runs/{full_path:path}",
-        "/actions/{full_path:path}",
-        "/oauth2/settings/{full_path:path}",
-    ]
+    index_routes = ["/", "/runs/{full_path:path}", "/actions/{full_path:path}"]
     for index_route in index_routes:
         app.add_api_route(
             index_route,
